Added ability to search for supported electricity companies, auto loading one based on current location
